# aegion-crewai-poc

./: .gitignore  main.py  pyproject.toml  schema.json
docs/: GITHUB_SEARCH_TOOL.md
utils/: doc_search.py  github_search.py  kb_search.py  mcp_tools.py  md_ingestion.py  memory.py  milvus_search.py  slack.py  telegram.py  todo_manager.py  todo_tool.py  todo_tools.py
